# arxiv-cli

./: .gitignore  Cargo.toml  README.md
gan/: paper_index.md
src/: api.rs  commands.rs  main.rs  model.rs  utils.rs
