[package]
name = "arxiv-cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
color-eyre = "0.5"
reqwest = "0.11.4"
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
quick-xml = { version = "0.21", features = ["serialize"] }
